---
source: crates/zizmor/tests/integration/cli.rs
expression: "zizmor().stdin(action).no_config(true).args([\"-\"]).run()?"
---
warning[artipacked]: credential persistence through GitHub Actions artifacts
 --> <stdin>:6:7
  |
6 |     - uses: actions/checkout@v3
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^ does not set persist-credentials: false
  |
  = note: audit confidence → Low
  = note: this finding has an auto-fix

error[unpinned-uses]: unpinned action reference
 --> <stdin>:6:13
  |
6 |     - uses: actions/checkout@v3
  |             ^^^^^^^^^^^^^^^^^^^ action is not pinned to a hash (required by blanket policy)
  |
  = note: audit confidence → High

2 findings (1 fixable): 0 informational, 0 low, 1 medium, 1 high
